codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__clawbot_tests__clawbot_management_popup.snap
---
source: tui/src/app/tests/clawbot_tests.rs
assertion_line: 413
expression: popup
---
  Clawbot
  Manage workspace-local Feishu credentials, sessions, and the current thread binding.

› 1. Turn Mode                  Switch clawbot-originated turns into non-interactive mode so
                                remote sessions do not block on prompts.
     Feishu Sessions            2 total · 1 bound · 1 unbound
  3. Scan Feishu Sessions       Discover Feishu chats and bot groups using the persisted workspace
                                credentials.
  4. Clear Unbound Sessions     Remove 1 unbound sessions and 1 cached unread messages.
     Alice                      bound · 0 unread
  6. Bob                        unbound · 1 unread
  7. Feishu App ID              Configured: cli_app_123
  8. Feishu App Secret          Configured: *************4567

  Press enter to confirm or esc to go back
